[gd_scene load_steps=43 format=2]

[ext_resource path="res://demo_assets/Roboto-Bold.ttf" type="FontData" id=1]
[ext_resource path="res://default_env.tres" type="Environment" id=2]
[ext_resource path="res://addons/navigation_jump_links/scripts/JumpLinkNavigation.gd" type="Script" id=3]
[ext_resource path="res://addons/navigation_jump_links/scripts/JumpLinkAgent.gd" type="Script" id=4]
[ext_resource path="res://addons/navigation_jump_links/nodes/JumpLinkObject.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/navigation_jump_links/nodes/JumpLinkPath.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/navigation_jump_links/nodes/JumpLink.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/navigation_jump_links/nodes/JumpLinkPosition.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/navigation_jump_links/debug/JumpLinkObjectMesh.tscn" type="PackedScene" id=10]
[ext_resource path="res://addons/navigation_jump_links/debug/JumpLinkObjectMaterial.tres" type="Material" id=11]
[ext_resource path="res://demo_assets/Font.tres" type="Font" id=12]
[ext_resource path="res://demo_assets/heart.png" type="Texture2D" id=13]
[ext_resource path="res://demo_levels/NavigationLinkDemo.gd" type="Script" id=14]

[sub_resource type="NavigationMesh" id=1]
vertices = PackedVector3Array( -13.7, 14.4, -2.7, -13.7, 14.4, 0.6, -5, 13.4, 0.6, -5, 13.4, -2.7, -8.48, 14.4, -2.7, -8.48, 14.4, 0.6, 3.7, 12.4, -2.7, -5, 13.4, -2.7, -5, 13.4, 0.6, 3.7, 12.4, 0.6, -1.52, 12.4, -2.7, -1.52, 12.4, 0.6 )
polygons = [ PackedInt32Array( 3, 2, 4 ), PackedInt32Array( 4, 2, 5 ), PackedInt32Array( 4, 5, 1 ), PackedInt32Array( 4, 1, 0 ), PackedInt32Array( 7, 10, 8 ), PackedInt32Array( 8, 10, 11 ), PackedInt32Array( 11, 10, 6 ), PackedInt32Array( 11, 6, 9 ) ]
agent/radius = 0.3
agent/max_climb = 0.5
agent/max_slope = 70.0
region/min_size = 2.0

[sub_resource type="BoxMesh" id=2]
size = Vector3( 6, 20, 4 )

[sub_resource type="PrismMesh" id=3]
left_to_right = 0.0
size = Vector3( 6, 2, 4 )

[sub_resource type="BoxMesh" id=4]
size = Vector3( 6, 2, 4 )

[sub_resource type="NavigationMesh" id=5]
vertices = PackedVector3Array( -13.7, 14.4, -30.7, -13.7, 14.4, -27.4, -5, 13.4, -27.4, -5, 13.4, -30.7, -8.48, 14.4, -30.7, -8.48, 14.4, -27.4, 3.7, 12.4, -30.7, -5, 13.4, -30.7, -5, 13.4, -27.4, 3.7, 12.4, -27.4, -1.52, 12.4, -30.7, -1.52, 12.4, -27.4 )
polygons = [ PackedInt32Array( 3, 2, 4 ), PackedInt32Array( 4, 2, 5 ), PackedInt32Array( 4, 5, 1 ), PackedInt32Array( 4, 1, 0 ), PackedInt32Array( 7, 10, 8 ), PackedInt32Array( 8, 10, 11 ), PackedInt32Array( 11, 10, 6 ), PackedInt32Array( 11, 6, 9 ) ]
agent/radius = 0.3
agent/max_climb = 0.5
agent/max_slope = 70.0

[sub_resource type="BoxMesh" id=6]
size = Vector3( 1, 1, 1 )

[sub_resource type="ConvexPolygonShape3D" id=7]
points = PackedVector3Array( -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5 )

[sub_resource type="Curve3D" id=8]
_data = {
"points": PackedVector3Array( 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 1, 1, 0, -1, -1, 0, 2, 1, 0, 2.39442, 1.99535, 0, -2.39442, -1.99535, 0, -3.9931, -1.06345, 0, -2.0378, 2.02931, 0, 2.0378, -2.02931, 0, -4.03556, -8.95994, 0, -1.5, 2.1, 0, 1.5, -2.1, 0, 4, -15, 0, 1, 1, 0, -1, -1, 0, 4, -22, 0, 1, 0, 0, -1, 0, 0, 0, -24 ),
"tilts": PackedFloat32Array( 0, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="BoxMesh" id=9]
size = Vector3( 1, 1, 1 )

[sub_resource type="ConvexPolygonShape3D" id=10]
points = PackedVector3Array( -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5 )

[sub_resource type="Curve3D" id=11]
_data = {
"points": PackedVector3Array( 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 4.8, 0.1, 0, -4.8, -0.1, -9.53674e-07, 0, -1.39465, 0, 0, 8, 0, 0, -8, -2.86102e-06, -5.3, -12, 0, -4.9, 0.1, 0, 4.9, -0.1, -9.53674e-07, 0, -22.429, 0, 0, -1, 0, 0, -1, -9.53674e-07, 0, -25 ),
"tilts": PackedFloat32Array( 0, 0, 0, 0, 0 )
}

[sub_resource type="StandardMaterial3D" id=12]
albedo_color = Color( 0, 0.552941, 1, 1 )

[sub_resource type="CapsuleMesh" id=13]
material = SubResource( 12 )
radius = 0.5
mid_height = 0.25
radial_segments = 32

[sub_resource type="StandardMaterial3D" id=14]
albedo_color = Color( 1, 0, 0.913725, 1 )

[sub_resource type="CapsuleMesh" id=15]
material = SubResource( 14 )
radius = 0.5
mid_height = 0.25
radial_segments = 32

[sub_resource type="StandardMaterial3D" id=16]
transparency = 1
shading_mode = 0
albedo_color = Color( 1, 0, 0.913725, 1 )
albedo_texture = ExtResource( 13 )
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id=17]
material = SubResource( 16 )
size = Vector2( 0.25, 0.25 )

[sub_resource type="StandardMaterial3D" id=18]
shading_mode = 0

[sub_resource type="CylinderMesh" id=19]
material = SubResource( 18 )
top_radius = 0.5
bottom_radius = 0.5
height = 0.001
radial_segments = 32

[sub_resource type="StandardMaterial3D" id=20]
shading_mode = 0
albedo_color = Color( 0, 0.0862745, 1, 1 )

[sub_resource type="CylinderMesh" id=21]
material = SubResource( 20 )
top_radius = 0.4
bottom_radius = 0.4
height = 0.001
radial_segments = 32

[sub_resource type="StandardMaterial3D" id=22]
albedo_color = Color( 0, 0.588235, 0.721569, 1 )
roughness = 0.5
emission_enabled = true
emission = Color( 0, 0.14902, 0.501961, 1 )

[sub_resource type="PlaneMesh" id=23]
material = SubResource( 22 )
size = Vector2( 1000, 1000 )

[sub_resource type="Animation" id=24]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 2, 4 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, 1, 0 ) ]
}

[sub_resource type="Font" id=25]
data/0 = ExtResource( 1 )

[sub_resource type="Font" id=26]
data/0 = ExtResource( 1 )

[sub_resource type="PlaneMesh" id=27]
size = Vector2( 9, 3 )

[sub_resource type="ViewportTexture" id=28]
viewport_path = NodePath("DebugTextMeshes/Infotext1/Viewport")

[sub_resource type="StandardMaterial3D" id=29]
resource_local_to_scene = true
transparency = 1
shading_mode = 0
albedo_texture = SubResource( 28 )

[node name="NavigationLinkDemo" type="Node3D"]
script = ExtResource( 14 )

[node name="JumpLinkNavigation" type="Node" parent="."]
_import_path = NodePath(".")
script = ExtResource( 3 )

[node name="NavigationMeshInstanceIsland2" type="NavigationRegion3D" parent="JumpLinkNavigation"]
navmesh = SubResource( 1 )
script = null

[node name="MeshInstance2" type="MeshInstance3D" parent="JumpLinkNavigation/NavigationMeshInstanceIsland2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2, -1 )
mesh = SubResource( 2 )
material/0 = null
script = null

[node name="MeshInstance5" type="MeshInstance3D" parent="JumpLinkNavigation/NavigationMeshInstanceIsland2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11, 4, -1 )
mesh = SubResource( 2 )
material/0 = null
script = null

[node name="MeshInstance6" type="MeshInstance3D" parent="JumpLinkNavigation/NavigationMeshInstanceIsland2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 13, -1 )
mesh = SubResource( 3 )
material/0 = null
script = null

[node name="MeshInstance7" type="MeshInstance3D" parent="JumpLinkNavigation/NavigationMeshInstanceIsland2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 11, -1 )
mesh = SubResource( 4 )
material/0 = null
script = null

[node name="NavigationMeshInstanceIsland1" type="NavigationRegion3D" parent="JumpLinkNavigation"]
navmesh = SubResource( 5 )
script = null

[node name="MeshInstance" type="MeshInstance3D" parent="JumpLinkNavigation/NavigationMeshInstanceIsland1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2, -29 )
mesh = SubResource( 2 )
material/0 = null
script = null

[node name="MeshInstance2" type="MeshInstance3D" parent="JumpLinkNavigation/NavigationMeshInstanceIsland1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11, 4, -29 )
mesh = SubResource( 2 )
material/0 = null
script = null

[node name="MeshInstance3" type="MeshInstance3D" parent="JumpLinkNavigation/NavigationMeshInstanceIsland1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 13, -29 )
mesh = SubResource( 3 )
material/0 = null
script = null

[node name="MeshInstance4" type="MeshInstance3D" parent="JumpLinkNavigation/NavigationMeshInstanceIsland1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 11, -29 )
mesh = SubResource( 4 )
material/0 = null
script = null

[node name="JumpLinksObjectContainer" type="Node3D" parent="JumpLinkNavigation"]
script = null
__meta__ = {
"_edit_lock_": true
}

[node name="JumpLinkObject" parent="JumpLinkNavigation/JumpLinksObjectContainer" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 12, -4 )
 = null

[node name="JumpLinkObjectMesh" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject" instance=ExtResource( 10 )]
mesh = SubResource( 6 )
material/0 = ExtResource( 11 )
script = null

[node name="JumpLinkObjectCollision" type="CollisionShape3D" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject"]
shape = SubResource( 7 )
script = null

[node name="LinksContainer" type="Node3D" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject"]
script = null
__meta__ = {
"_edit_lock_": true
}

[node name="JumpLink" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject/LinksContainer" instance=ExtResource( 7 )]
 = null

[node name="JumpingPosition" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject/LinksContainer/JumpLink" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, -6.77626e-21, 0, 1, 0, 0, 2 )

[node name="LandingPosition" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject/LinksContainer/JumpLink" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, -6.77626e-21, 0, 1, 0, 0, -24 )

[node name="JumpLinkPath" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject/LinksContainer/JumpLink" instance=ExtResource( 6 )]
curve = SubResource( 8 )

[node name="JumpLink" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject/LinksContainer" instance=ExtResource( 7 )]
 = null

[node name="JumpLink" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject/LinksContainer" instance=ExtResource( 7 )]
 = null

[node name="JumpLink" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject/LinksContainer" instance=ExtResource( 7 )]
 = null

[node name="JumpLinkObject" parent="JumpLinkNavigation/JumpLinksObjectContainer" instance=ExtResource( 5 )]
 = null

[node name="JumpLinkObject" parent="JumpLinkNavigation/JumpLinksObjectContainer" instance=ExtResource( 5 )]
 = null

[node name="JumpLinkObject" parent="JumpLinkNavigation/JumpLinksObjectContainer" instance=ExtResource( 5 )]
 = null

[node name="JumpLinkObject2" parent="JumpLinkNavigation/JumpLinksObjectContainer" instance=ExtResource( 5 )]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, -1, 12, -26 )
 = null

[node name="JumpLinkObjectMesh" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject2" instance=ExtResource( 10 )]
material/0 = ExtResource( 11 )
script = null

[node name="JumpLinkObjectCollision" type="CollisionShape3D" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject2"]
shape = SubResource( 7 )
script = null

[node name="LinksContainer" type="Node3D" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject2"]
script = null
__meta__ = {
"_edit_lock_": true
}

[node name="JumpLink" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject2/LinksContainer" instance=ExtResource( 7 )]
 = null

[node name="JumpingPosition" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject2/LinksContainer/JumpLink" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, -6.77626e-21, 0, 1, 0, 0, 2 )

[node name="LandingPosition" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject2/LinksContainer/JumpLink" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, -6.77626e-21, 0, 1, 0, 0, -24 )

[node name="JumpLinkPath" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject2/LinksContainer/JumpLink" instance=ExtResource( 6 )]
curve = SubResource( 8 )

[node name="JumpLink" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject2/LinksContainer" instance=ExtResource( 7 )]
 = null

[node name="JumpLink" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject2/LinksContainer" instance=ExtResource( 7 )]
 = null

[node name="JumpLink" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject2/LinksContainer" instance=ExtResource( 7 )]
 = null

[node name="JumpLinkObject2" parent="JumpLinkNavigation/JumpLinksObjectContainer" instance=ExtResource( 5 )]
 = null

[node name="JumpLinkObject2" parent="JumpLinkNavigation/JumpLinksObjectContainer" instance=ExtResource( 5 )]
 = null

[node name="JumpLinkObject2" parent="JumpLinkNavigation/JumpLinksObjectContainer" instance=ExtResource( 5 )]
 = null

[node name="JumpLinkObject3" parent="JumpLinkNavigation/JumpLinksObjectContainer" instance=ExtResource( 5 )]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, -11, 14, -27 )
 = null

[node name="JumpLinkObjectMesh" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject3" instance=ExtResource( 10 )]
mesh = SubResource( 9 )
material/0 = ExtResource( 11 )
script = null

[node name="JumpLinkObjectCollision" type="CollisionShape3D" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject3"]
shape = SubResource( 10 )
script = null

[node name="LinksContainer" type="Node3D" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject3"]
script = null
__meta__ = {
"_edit_lock_": true
}

[node name="JumpLink" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject3/LinksContainer" instance=ExtResource( 7 )]
 = null

[node name="JumpingPosition" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject3/LinksContainer/JumpLink" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, -6.77626e-21, 0, 1, 0, 0, 1 )

[node name="LandingPosition" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject3/LinksContainer/JumpLink" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.53674e-07, 0, -25 )

[node name="JumpLinkPath" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject3/LinksContainer/JumpLink" instance=ExtResource( 6 )]
curve = SubResource( 11 )

[node name="JumpLink" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject3/LinksContainer" instance=ExtResource( 7 )]
 = null

[node name="JumpLink" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject3/LinksContainer" instance=ExtResource( 7 )]
 = null

[node name="JumpLink" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject3/LinksContainer" instance=ExtResource( 7 )]
 = null

[node name="JumpLinkObject3" parent="JumpLinkNavigation/JumpLinksObjectContainer" instance=ExtResource( 5 )]
 = null

[node name="JumpLinkObject3" parent="JumpLinkNavigation/JumpLinksObjectContainer" instance=ExtResource( 5 )]
 = null

[node name="JumpLinkObject3" parent="JumpLinkNavigation/JumpLinksObjectContainer" instance=ExtResource( 5 )]
 = null

[node name="JumpLinkObject4" parent="JumpLinkNavigation/JumpLinksObjectContainer" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 2.38419e-07, 0, 1, 0, -2.38419e-07, 0, 1, -11, 14, -3 )
 = null

[node name="JumpLinkObjectMesh" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject4" instance=ExtResource( 10 )]
material/0 = ExtResource( 11 )
script = null

[node name="JumpLinkObjectCollision" type="CollisionShape3D" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject4"]
shape = SubResource( 10 )
script = null

[node name="LinksContainer" type="Node3D" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject4"]
script = null
__meta__ = {
"_edit_lock_": true
}

[node name="JumpLink" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject4/LinksContainer" instance=ExtResource( 7 )]
 = null

[node name="JumpingPosition" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject4/LinksContainer/JumpLink" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, -6.77626e-21, 0, 1, 0, 0, 1 )

[node name="LandingPosition" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject4/LinksContainer/JumpLink" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.53674e-07, 0, -25 )

[node name="JumpLinkPath" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject4/LinksContainer/JumpLink" instance=ExtResource( 6 )]
curve = SubResource( 11 )

[node name="JumpLink" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject4/LinksContainer" instance=ExtResource( 7 )]
 = null

[node name="JumpLink" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject4/LinksContainer" instance=ExtResource( 7 )]
 = null

[node name="JumpLink" parent="JumpLinkNavigation/JumpLinksObjectContainer/JumpLinkObject4/LinksContainer" instance=ExtResource( 7 )]
 = null

[node name="JumpLinkObject4" parent="JumpLinkNavigation/JumpLinksObjectContainer" instance=ExtResource( 5 )]
 = null

[node name="JumpLinkObject4" parent="JumpLinkNavigation/JumpLinksObjectContainer" instance=ExtResource( 5 )]
 = null

[node name="JumpLinkObject4" parent="JumpLinkNavigation/JumpLinksObjectContainer" instance=ExtResource( 5 )]
 = null

[node name="CameraAnchor" type="Node3D" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 5, -15 )
script = null

[node name="Camera" type="Camera3D" parent="CameraAnchor"]
_import_path = NodePath("Camera")
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 20, 20 )
current = true
fov = 60.0
near = 0.1
far = 150.0
script = null

[node name="JumpLinkAgents" type="Node3D" parent="."]
script = null

[node name="Robi_JumpLinkAgent" type="Node3D" parent="JumpLinkAgents" groups=[
"player",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12, -30 )
script = ExtResource( 4 )

[node name="RobotMesh" type="MeshInstance3D" parent="JumpLinkAgents/Robi_JumpLinkAgent"]
_import_path = NodePath("Sphere")
transform = Transform( -0.5, 0, -7.54979e-08, 0, 1, 0, 7.54979e-08, 0, -0.5, 0, 0.75, 0 )
gi_mode = 1
mesh = SubResource( 13 )
material/0 = null
script = null

[node name="Robina_JumpLinkAgent" type="Position3D" parent="JumpLinkAgents"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.9361, 12, 0 )
script = ExtResource( 4 )

[node name="RobotMesh" type="MeshInstance3D" parent="JumpLinkAgents/Robina_JumpLinkAgent"]
_import_path = NodePath("Sphere")
transform = Transform( -0.5, 0, -7.54979e-08, 0, 1, 0, 7.54979e-08, 0, -0.5, 0, 0.75, 0 )
gi_mode = 1
mesh = SubResource( 15 )
material/0 = null
script = null

[node name="CPUParticles" type="CPUParticles3D" parent="JumpLinkAgents/Robina_JumpLinkAgent"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.00298, 0 )
cast_shadow = 0
amount = 6
local_coords = false
mesh = SubResource( 17 )
emission_shape = 2
emission_box_extents = Vector3( 0.5, 0.5, 0.5 )
direction = Vector3( 0, 1, 0 )
gravity = Vector3( 0, 0.5, 0 )
initial_velocity = 0.2
initial_velocity_random = 0.5
script = null

[node name="MoveTargetMarker" type="Position3D" parent="."]
script = null

[node name="MoveTargetMarkerMesh" type="MeshInstance3D" parent="MoveTargetMarker"]
cast_shadow = 0
mesh = SubResource( 19 )
material/0 = null
script = null

[node name="MovePosMarkerRing" type="MeshInstance3D" parent="MoveTargetMarker/MoveTargetMarkerMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.001, 0 )
cast_shadow = 0
mesh = SubResource( 21 )
material/0 = null
script = null

[node name="Environment" type="Node3D" parent="."]
script = null

[node name="DirectionalLight" type="DirectionalLight3D" parent="Environment"]
transform = Transform( 0.623013, -0.733525, 0.271653, 0.321394, 0.55667, 0.766045, -0.713134, -0.389948, 0.582563, -10.1466, 5.02381, 8.22224 )
light_color = Color( 0.133333, 0.133333, 0.133333, 1 )
light_energy = 4.0
shadow_enabled = true
script = null

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = ExtResource( 2 )
script = null

[node name="Dark_Abyss" type="MeshInstance3D" parent="Environment"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.73258, 0 )
mesh = SubResource( 23 )
material/0 = null
script = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="Environment/Dark_Abyss"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 24 )
blend_times = [  ]
script = null

[node name="OmniLight" type="OmniLight3D" parent="Environment"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 16, -15 )
light_color = Color( 1, 0.898039, 0.0509804, 1 )
shadow_enabled = true
omni_range = 25.0
script = null

[node name="Deco" type="Node3D" parent="Environment"]
script = null
__meta__ = {
"_edit_group_": true
}

[node name="CSGCombiner" type="CSGCombiner3D" parent="Environment/Deco"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 2, -22 )
script = null

[node name="CSGBox" type="CSGBox3D" parent="Environment/Deco/CSGCombiner"]
script = null

[node name="CSGCylinder" type="CSGCylinder3D" parent="Environment/Deco/CSGCombiner"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 8.74228e-08, 9.916, 1 )
operation = 2
radius = 6.0
height = 3.0
sides = 64
smooth_faces = false
script = null

[node name="CSGCombiner2" type="CSGCombiner3D" parent="Environment/Deco"]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 3, 2, -8 )
script = null

[node name="CSGBox" type="CSGBox3D" parent="Environment/Deco/CSGCombiner2"]
script = null

[node name="CSGCylinder" type="CSGCylinder3D" parent="Environment/Deco/CSGCombiner2"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 8.74228e-08, 9.916, 1 )
operation = 2
radius = 6.0
height = 3.0
sides = 64
smooth_faces = false
script = null

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = null

[node name="Toggle_Debug" type="Button" parent="CanvasLayer"]
text = "Toggle Debug"
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 25 )
text = "Jump-Links Node Demo
Pathfinding between multiple 3D Navigation Islands"
valign = 1
structured_text_bidi_override_options = [  ]
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 26 )
text = "e.g. ladder and rope climbing, jumping over chasms, chasing player AI ..."
valign = 1
structured_text_bidi_override_options = [  ]
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugTextMeshes" type="Node3D" parent="."]
script = null

[node name="Infotext1" type="MeshInstance3D" parent="DebugTextMeshes" groups=[
"jump_links_debug",
]]
transform = Transform( -6.51683e-07, 3.4641, 2, 0, 2, -3.4641, -4, -5.64374e-07, -3.25841e-07, -20.9803, -0.998077, -19.733 )
mesh = SubResource( 27 )
material/0 = SubResource( 29 )
script = null

[node name="Viewport" type="SubViewport" parent="DebugTextMeshes/Infotext1"]
transparent_bg = true
size = Vector2i( 1200, 400 )
render_target_update_mode = 3
script = null

[node name="Label" type="Label" parent="DebugTextMeshes/Infotext1/Viewport"]
custom_fonts/font = ExtResource( 12 )
text = "top can only be used by agents with 'daredevil' tag"
align = 1
valign = 1
structured_text_bidi_override_options = [  ]
script = null

[connection signal="pressed" from="CanvasLayer/Toggle_Debug" to="." method="_on_Toggle_Debug_pressed"]
